@@ -38,13 +38,21 @@ struct tcps_sess_s {
         int iMsg; /* index of next char to store in msg */
         sbool bSuppOctetFram; /**< copy from listener, to speed up access */
         sbool bSPFramingFix;
-        enum { eAtStrtFram, eInOctetCnt, eInMsg, eInMsgTruncating } inputState; /* our current state */
+        enum {
+            eAtStrtFram,
+            eInOctetCnt,
+            eInMsg,
+            eInMsgTruncating,
+            eInMsgCheckMultiLine
+        } inputState; /* our current state */
         int iOctetsRemain; /* Number of Octets remaining in message */
         TCPFRAMINGMODE eFraming;
         uchar *pMsg; /* message (fragment) received */
         prop_t *fromHost; /* host name we received messages from */
         prop_t *fromHostIP;
         prop_t *fromHostPort;
+        int iCurrLine; /* 2nd char of current line in regex framing mode */
+        uchar *pMsg_save; /* message (fragment) save area in regex framing mode */
         void *pUsr; /* a user-pointer */
         rsRetVal (*DoSubmitMessage)(tcps_sess_t *, uchar *, int); /* submit message callback */
         int iMaxLine; /* fast lookup buffer for config property */
