@@ -2,6 +2,16 @@
 Scheduled Release 8.2602.0 (aka 2026.02) 2026-12-??
 - overall improved documentation via a large set of topic updates.
 
+- 2026-01-31: imtcp: add MultiLine and regex framing support
+  Non-technical: improves operator ergonomics and closes a feature gap
+  with imptcp. Enables regex-based start-of-frame detection and optional
+  multi-line message handling on TCP inputs.
+  Impact: New config params; defaults keep existing behavior unchanged.
+  Before: imtcp framed messages via octet-counting or LF delimiter only.
+  After: imtcp can treat lines not starting a new frame as continuations
+  (MultiLine) and can split frames on a regex start pattern.
+  Adds imtcp params: MultiLine (bool) and framing.delimiter.regex (string).
+  closes https://github.com/rsyslog/rsyslog/issues/5637
 - 2026-01-30: omfile: avoid rare close/open race
   ... and prevent lock-order inversion when internal logging runs
   during open failures.
